--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Lab3CS8">
+  <meta name="author" content="862296203">
 
-  <title>John Doe - Business Administration</title>
+  <title>John David Solomon - Psychology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">John Doe</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/davidsolomon.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,23 +61,23 @@
         <h1 class="mb-3">John Doe
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <p class="lead mb-4">I am currently a undergraduate student majoring in psychology. I am deeply fascinated by the human mind and have shown remarkable dedication throughout my academic journey. During my time in college, I consistently excelled in my studies, receiving prestigious awards and recognition. My talent lies in his ability to understand complex psychological concepts, review extensive literature, and engage in thoughtful discussions with professors and peers. My passion for psychology goes beyond the classroom; it's a driving force that motivates me to make a meaningful impact in the world as I continuously seek to expand my knowledge and challenge established ideas.<br><br>
 
-        Enter bio here<br><br>
+        My academic pursuits in psychology have been marked by a genuine thirst for knowledge and a strong work ethic. I have immersed myself in a diverse range of psychology courses, covering essential topics such as introductory psychology, research methods, and statistics. These experiences have allowed me to grasp the fundamental principles of the field, and I have consistently maintained high academic performance. While I may have minimal practical experience, my coursework has equipped me with a robust theoretical understanding of psychology, setting the stage for further exploration and application.<br><br>
 
-        Enter bio here
+         I am eager to complement my academic endeavors with hands-on experience, such as internships and research opportunities. My ultimate goal is to leverage my growing knowledge of psychology to positively impact individuals and communities, whether through clinical practice, research contributions, or counseling. I see my limited experience as a stepping stone, and I am determined to learn, grow, and adapt to the evolving landscape of psychology. With each day, I am one step closer to realizing my dream of making a meaningful difference in the lives of others through the power of psychology.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.apa.org">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/JDavidSolomon">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://psychology.ucr.edu">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:jsolo039@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Jollibee Team Member</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.jollibeefoods.com">Fast Food</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Provided exceptional service to high volume of daily customers<br> 
+              • Carried food, dishes, trays, or silverware from kitches of supply departments to serving customers<br>
+              • Efficiently work together in 10 and/or more member teams to quickly complete orders<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">January 2019 - October 2019</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Jollibee Cook</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.jollibeefoods.com">Fast Food</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Skilled in following food safety and hygiene standards to ensure food quality and customer satisfaction.<br>
+              • Knowledge of proper food handling, storage, and preparation techniques to maintain quality and safety standards.<br>
+              • Contributed to a positive work environment by communicating effectively with kitchen staff and supervisors.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2019 - October 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Highschool All-Male Hip Hop Dance Team</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.vhstigers.org">Valencia High School</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Worked with various teammates and staff an all-male high school hip hop team to achieve victory in local and regional dance competitions.<br>
+            • Worked closely with team members to create a cohesive and dynamic performance group.<br>
+            • Collaborated on choreography, timing, and costume choices to ensure a polished and professional look on stage.<br>
+           <br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">July 2014 - May 2018</span>
           </div>
         </div>
 
@@ -151,34 +152,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">University of California Riverside</h3>
+            <div class="subheading mb-3">B.A. DEGREE IN PSYCHOLOGY</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2021 - August 2024</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Santiago Canyon Community College</h3>
+            <div class="subheading mb-3">Associate in arts (AA), an associate in science (AS), and an associate in applied science (AAS) degree in psychology</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">June 2018-June 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">Valencia High School</h3>
+            <div class="subheading mb-3">High school degree</div>
+            <div></div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2014 - May 2018</span>
           </div>
         </div>
 
@@ -191,7 +192,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="jcr_content.jpg" width="500px">
+            <img src="jollibee-anaheim.jpg" width="500px"> <br>
+            <img src="Jollibee_2011_logo.svg.png" width="500px">
+            <img src="ucr-and-bell-tower.jpg" width="500px"> <br>
         </center>
       </div>
     </section>
