--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">John David Solomon</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/davidsolomon.jpg" alt="Profile Picture">
       </span>
@@ -58,7 +58,7 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">John David Solomon
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
         <p class="lead mb-4">I am currently a undergraduate student majoring in psychology. I am deeply fascinated by the human mind and have shown remarkable dedication throughout my academic journey. During my time in college, I consistently excelled in my studies, receiving prestigious awards and recognition. My talent lies in his ability to understand complex psychological concepts, review extensive literature, and engage in thoughtful discussions with professors and peers. My passion for psychology goes beyond the classroom; it's a driving force that motivates me to make a meaningful impact in the world as I continuously seek to expand my knowledge and challenge established ideas.<br><br>
@@ -203,7 +203,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> John David Solomon</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
